--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,40 @@
-version: '2'
-services:
-  api:
-    build: .
-    container_name: api
-    command: bash -c "cd /src/rest && python manage.py runserver 0.0.0.0:8000"
-    ports:
-      - "8000:8000"
-    links:
-      - mongo
-    volumes:
-      - ${ADBREW_CODEBASE_PATH}/tmp:/tmp
-      - ${ADBREW_CODEBASE_PATH}:/src
+version: '3.8'
 
+services:
   app:
-    build: .
-    container_name: app
-    command: bash -c "cd /src/app && yarn install && yarn start"
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - ${ADBREW_CODEBASE_PATH}/src/app:/src/app
     ports:
       - "3000:3000"
+    depends_on:
+      - api
+    environment:
+      - NODE_ENV=development
+
+  api:
+    build:
+      context: .
+      dockerfile: Dockerfile
     volumes:
-      - ${ADBREW_CODEBASE_PATH}:/src
+      - ${ADBREW_CODEBASE_PATH}/src:/src
+    ports:
+      - "8000:8000"
+    depends_on:
+      - mongo
+    environment:
+      - ENV_TYPE=staging
+      - MONGO_HOST=mongo
+      - MONGO_PORT=27017
 
   mongo:
-    build: .
-    container_name: mongo
-    restart: always
+    image: mongo:4.4
     ports:
       - "27017:27017"
     volumes:
-      - ${ADBREW_CODEBASE_PATH}/db/:/data/db
-    command: /usr/bin/mongod --bind_ip 0.0.0.0
+      - mongo-data:/data/db
 
-    
+volumes:
+  mongo-data:
